--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
   "description": "",
   "main": "app.js",
   "dependencies": {
+    "chalk": "^3.0.0",
     "dotenv": "^8.2.0",
     "nodemon": "^2.0.2",
     "telegraf": "^3.36.0"
   },
   "devDependencies": {},
   "scripts": {
-    "start":"node app.js"
+    "start": "node app.js"
   },
   "author": "",
   "license": "ISC"
