--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "chalk": "^3.0.0",
     "dotenv": "^8.2.0",
     "nodemon": "^2.0.2",
+    "prettier": "^1.19.1",
     "telegraf": "^3.36.0"
   },
   "devDependencies": {},
