--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "chalk": "^3.0.0",
     "dotenv": "^8.2.0",
+    "markdown-table": "^2.0.0",
     "nodemon": "^2.0.2",
     "prettier": "^1.19.1",
     "telegraf": "^3.36.0"
